Creazione pagina iniziale, collegamento alcune pagine, funzionamento file prof gestione admin